--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -14,8 +15,8 @@
 
 
     <!-- Proje CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive-style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}">
 
     <style>
         body {
@@ -67,7 +68,7 @@
                 <div class="card text-center">
 
                     <!-- Logo -->
-                    <img id="logo-img" src="images/Daamduu Tamak logo.png" alt="Logo"
+                    <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="Logo"
                         class="img-fluid mx-auto d-block mb-3" style="max-width: 120px;">
 
                     <!-- Hoşgeldiniz Yazısı -->
