--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -11,8 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
     <!-- Proje CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive-style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}">
 
     <style>
         body {
@@ -51,7 +52,7 @@
         <a href="?lang=tr" class="lang-link" id="tr-link">TR</a>
     </div>
     <div class="card text-center">
-        <img id="logo-img" src="images/Daamduu Tamak logo.png" alt="Logo" style="max-width: 100px;"
+        <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="Logo" style="max-width: 100px;"
             class="mb-3 d-block mx-auto">
         <h4 class="mb-3" data-lang-tr="Şifremi Unuttum" data-lang-kg="Сырсөзүмдү унуттум">Şifremi Unuttum</h4>
 
