--- a/templates/takim.html
+++ b/templates/takim.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -9,8 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/responsive-style.css" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}" />
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navigation-wrap">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img id="logo-img" src="images/Daamduu Tamak logo.png" alt="logo" />
+          <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="logo" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +71,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="card">
-              <img src="./images/team/şef-1.png" class="img-fluid" />
+              <img src="{% static 'images/team/şef-1.png' %}" class="img-fluid" />
               <div class="team-caption py-4 px-2">
                 <h4 data-lang-tr="İslam İLYASOV" data-lang-kg="Ислам Ильясов"></h4>
                 <h6 data-lang-tr="Ekmek Pişirici" data-lang-kg="Нан бышыруучу"></h6>
@@ -87,7 +88,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="card">
-              <img src="./images/team/şef-2.png" class="img-fluid" />
+              <img src="{% static 'images/team/şef-2.png' %}" class="img-fluid" />
               <div class="team-caption py-4 px-2">
                 <h4 data-lang-tr="Gülnara MURADOVA" data-lang-kg="Гүлнара Мурадова"></h4>
                 <h6 data-lang-tr="Aşçı" data-lang-kg="Ашпозчу"></h6>
@@ -104,7 +105,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="card">
-              <img src="./images/team/şef-3.png" class="img-fluid" />
+              <img src="{% static 'images/team/şef-3.png' %}" class="img-fluid" />
               <div class="team-caption py-4 px-2">
                 <h4 data-lang-tr="Mikail ÇAHALOV" data-lang-kg="Микаил Чахалов"></h4>
                 <h6 data-lang-tr="Aşçıbaşı" data-lang-kg="Баш ашпозчу"></h6>
@@ -178,7 +179,7 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
