--- a/templates/bugun-menu.html
+++ b/templates/bugun-menu.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -9,10 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <link rel="stylesheet" href="css/responsive-style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 
 <body>
@@ -20,8 +21,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navigation-wrap">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img id="logo-img" src="images/Daamduu Tamak logo.png" alt="logo" />
+        <a class="navbar-brand" href="{% url 'index' %}">
+          <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="logo" />
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -31,11 +32,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html" data-lang-tr="Ana Sayfa"
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}" data-lang-tr="Ana Sayfa"
                 data-lang-kg="Башкы бет"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="bugun-menu.html" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
+              <a class="nav-link" href="{% url 'menu-today' %}" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="haftalik-menu.html" data-lang-tr="Haftalık Menü"
@@ -48,7 +49,7 @@
               <a class="nav-link" href="takim.html" data-lang-tr="Takım" data-lang-kg="Курам"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-1" href="index.html">
+              <a class="nav-link d-flex align-items-center gap-1" href="{% url 'logout' %}">
                 <i class="fas fa-sign-out-alt"></i>
                 <span data-lang-tr="Çıkış Yap" data-lang-kg="Чыгуу"></span>
               </a>
