--- a/templates/home.html
+++ b/templates/home.html
@@ -29,25 +29,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="home.html" data-lang-tr="Ana Sayfa"
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}" data-lang-tr="Ana Sayfa"
                 data-lang-kg="Башкы бет"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="bugun-menu.html" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
+              <a class="nav-link" href="{% url 'menu-today' %}" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="haftalik-menu.html" data-lang-tr="Haftalık Menü"
+              <a class="nav-link" href="{% url 'menu-list-create' %}" data-lang-tr="Haftalık Menü"
                 data-lang-kg="Жумалык меню"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hakkimizda.html" data-lang-tr="Hakkımızda" data-lang-kg="Биз жөнүндө">
+              <a class="nav-link" href="{% url 'about' %}" data-lang-tr="Hakkımızda" data-lang-kg="Биз жөнүндө">
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="takim.html" data-lang-tr="Takım" data-lang-kg="Курам"></a>
+              <a class="nav-link" href="{% url 'team' %}" data-lang-tr="Takım" data-lang-kg="Курам"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-1" href="index.html">
+              <a class="nav-link d-flex align-items-center gap-1" href="{% url 'index' %}">
                 <i class="fas fa-sign-out-alt"></i>
                 <span data-lang-tr="Çıkış Yap" data-lang-kg="Чыгуу"></span>
               </a>
@@ -92,10 +92,10 @@
               кылуу максатында студенттердин суроо-талаптары жана мезгилдин өзгөчөлүктөрү эске алынуу менен түзүлөт.
               Менюнун негизин төмөндөгүлөр түзөт: эт азыктары, тоок жана балык азыктары, ысык-муздак закускалар, салаттар,
               татуу токочтор, жемиштер ж.б. Сатыкка коюлган тамак-аштардын ар биринен күнүгө  үлгүлөр алынып, 72 саат эрежелерге
-              ылайык сакталып, текшерилип турат. Университеттин социалдык, спорттук жана маданий иш-чараларына катышкан
+              ылайыk сакталып, текшерилип турат. Университеттин социалдык, спорттук жана маданий иш-чараларына катышкан
               студенттерге иш-чара учурунда эртеӊ мененки тамак, чай, кофе, түшкү жана кечки тамак, тез татым азыктары
               берилип турат. Кызматкерлер атайын форма: баш кийим, кол кап кийип тейлешет.  Университеттин тамак-аш инженерлери
-              жана тамак-аш технологдору жыл мезгилине жараша талап кылынган калорияны эске алуу менен бир айлыk ысык тамактын
+              жана тамак-аш технологдору жыл мезгилине жараша талап кылыnган калорияны эске алуу менен бир айлыk ысык тамактын
               менюсун түзүшөт жана ал окуу жайыбыздын интернет-баракчасына жайгаштырылат.">
             </p>
           </div>
