--- a/templates/register.html
+++ b/templates/register.html
@@ -99,7 +99,7 @@
                     <hr class="my-4">
                     <p class="mt-3 text-center">
                         <span data-lang-tr="Zaten hesabınız var mı?" data-lang-kg="Катталган аккаунтуңуз барбы?"></span>
-                        <a href="login.html" class="fw-bold text-decoration-none" data-lang-tr="Giriş Yap"
+                        <a href="{% url 'login' %}" class="fw-bold text-decoration-none" data-lang-tr="Giriş Yap"
                             data-lang-kg="Кирүү"></a>
                     </p>
                 </div>
@@ -112,7 +112,7 @@
         function redirectToIndex(event) {
             event.preventDefault();
             setTimeout(() => {
-                window.location.href = "home.html";
+                window.location.href = "{% url 'home' %}";
             }, 500);
         }
     </script>
