--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -76,7 +76,7 @@
         </div>
 
         <p class="mt-3">
-            <a href="login.html" class="text-decoration-none text-muted">
+            <a href="{% url 'login' %}" class="text-decoration-none text-muted">
                 <i class="bi bi-arrow-left me-1"></i>
                 <span data-lang-tr="Girişe dön" data-lang-kg="Кирүү бетине кайтуу"></span>
             </a>
