--- a/templates/register.html
+++ b/templates/register.html
@@ -86,7 +86,7 @@
                         <input type="password" class="form-control mb-3" placeholder="Şifreniz"
                             data-placeholder-tr="Şifreniz" data-placeholder-kg="Сырсөзүңүз" required>
                         <!-- <p class="mt-2">
-                            <a href="reset-password.html" class="text-decoration-none text-muted"
+                            <a href="{% url 'reset-password' %}" class="text-decoration-none text-muted"
                                 style="font-size: 0.9rem;">
                                 <i class="bi bi-key-fill me-1"></i>
                                 <span data-lang-tr="Şifremi unuttum" data-lang-kg="Сырсөздү унуттум"></span>
