--- a/templates/bugun-menu.html
+++ b/templates/bugun-menu.html
@@ -39,14 +39,14 @@
               <a class="nav-link" href="{% url 'menu-today' %}" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="haftalik-menu.html" data-lang-tr="Haftalık Menü"
+              <a class="nav-link" href="{% url 'haftalik-menu' %}" data-lang-tr="Haftalık Menü"
                 data-lang-kg="Жумалык меню"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hakkimizda.html" data-lang-tr="Hakkımızda" data-lang-kg="Биз жөнүндө"></a>
+              <a class="nav-link" href="{% url 'about' %}" data-lang-tr="Hakkımızda" data-lang-kg="Биз жөнүндө"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="takim.html" data-lang-tr="Takım" data-lang-kg="Курам"></a>
+              <a class="nav-link" href="{% url 'team' %}" data-lang-tr="Takım" data-lang-kg="Курам"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center gap-1" href="{% url 'logout' %}">
