Initial commit: Daamduu Restaurant Menu Management System

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,10 +33,10 @@
                 data-lang-kg="Башкы бет"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'menu-today' %}" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
+              <a class="nav-link" href="{% url 'bugun-menu' %}" data-lang-tr="Bugün Menüde" data-lang-kg="Бүгүнкү меню"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'menu-list-create' %}" data-lang-tr="Haftalık Menü"
+              <a class="nav-link" href="{% url 'haftalik-menu' %}" data-lang-tr="Haftalık Menü"
                 data-lang-kg="Жумалык меню"></a>
             </li>
             <li class="nav-item">
