--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 
     <style>
         body {
-            background: url('images/bg/bg-21.jpg') no-repeat center center/cover;
+            background: url("{% static 'images/bg/bg-21.jpg' %}") no-repeat center center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
