--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -8,8 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/responsive-style.css" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}" />
 </head>
 
 <body>
@@ -116,9 +117,9 @@
     // LOGO DEĞİŞİMİ
     const logo = document.getElementById('logo-img');
     if (lang === 'kg') {
-      logo.src = "images/Daamduu Tamak logo.png"; // Kırgızca logo
+      logo.src = "{% static 'images/Daamduu Tamak logo.png' %}"; // Kırgızca logo
     } else {
-      logo.src = "images/Lezzetli Yemek logo.png"; // Türkçe logo
+      logo.src = "{% static 'images/Lezzetli Yemek logo.png' %}"; // Türkçe logo
     }
 
     document.querySelectorAll("input[data-placeholder-tr]").forEach(input => {
@@ -130,8 +131,8 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/admin.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/admin.js' %}"></script>
 
 </body>
 
