--- a/templates/bugun-menu.html
+++ b/templates/bugun-menu.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  <link rel="stylesheet" href="css/responsive-style.css" />
+  <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="https://js.stripe.com/v3/"></script>
 </head>
@@ -82,7 +82,7 @@
         <div class="row pt-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -93,7 +93,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -117,7 +117,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -246,9 +246,9 @@
     // LOGO DEĞİŞİMİ
     const logo = document.getElementById('logo-img');
     if (lang === 'kg') {
-      logo.src = "images/Daamduu Tamak logo.png"; // Kırgızca logo
+      logo.src = "{% static 'images/Daamduu Tamak logo.png' %}"; // Kırgızca logo
     } else {
-      logo.src = "images/Lezzetli Yemek logo.png"; // Türkçe logo
+      logo.src = "{% static 'images/Lezzetli Yemek logo.png' %}"; // Türkçe logo
     }
     document.querySelectorAll("input[data-placeholder-tr]").forEach(input => {
       const newPlaceholder = input.getAttribute(`data-placeholder-${lang}`);
