--- a/templates/haftalik-menu.html
+++ b/templates/haftalik-menu.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -9,8 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/responsive-style.css" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/responsive-style.css' %}" />
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navigation-wrap">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img id="logo-img" src="images/Daamduu Tamak logo.png" alt="logo" />
+          <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="logo" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +79,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -89,7 +90,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -100,7 +101,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -113,7 +114,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -136,7 +137,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -147,7 +148,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -158,7 +159,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -171,7 +172,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -194,7 +195,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -205,7 +206,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -216,7 +217,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -229,7 +230,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -252,7 +253,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -263,7 +264,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -274,7 +275,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -287,7 +288,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -310,7 +311,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası </span>
@@ -321,7 +322,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -332,7 +333,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -346,7 +347,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -369,7 +370,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası
@@ -381,7 +382,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -392,7 +393,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -406,7 +407,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -429,7 +430,7 @@
         <div class="row pt-4 pb-5">
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Erişte Çorbası.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Erişte Çorbası.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Erişte Çorbası" data-lang-kg="Кесме шорпо">Erişte Çorbası
@@ -441,7 +442,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Kavurma.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Kavurma.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <div>
                   <span data-lang-tr="Kavurma" data-lang-kg="Куурдак">Kavurma </span>
@@ -452,7 +453,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/sebzeli pirinç.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/sebzeli pirinç.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Raspberry Stuffed French Food</h4> -->
                 <div>
@@ -466,7 +467,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="card">
-              <img src="images/yemek/Cacık.jpg" class="img-fluid" />
+              <img src="{% static 'images/yemek/Cacık.jpg' %}" class="img-fluid" />
               <div class="p-4 pb-1">
                 <!-- <h4>Rainbow Vegetable Burger</h4> -->
                 <div>
@@ -528,14 +529,15 @@
     // LOGO DEĞİŞİMİ
     const logo = document.getElementById('logo-img');
     if (lang === 'kg') {
-      logo.src = "images/Daamduu Tamak logo.png"; // Kırgızca logo
+      logo.src = "{% static 'images/Daamduu Tamak logo.png' %}"; // Kırgızca logo
     } else {
-      logo.src = "images/Lezzetli Yemek logo.png"; // Türkçe logo
+      logo.src = "{% static 'images/Lezzetli Yemek logo.png' %}"; // Türkçe logo
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/admin.js' %}"></script>
 </body>
 
 </html>
